⚡️ Update Wordpress AI review workflow

--- a/.github/workflows/build-wordpress-ai-review.yml
+++ b/.github/workflows/build-wordpress-ai-review.yml
@@ -124,32 +124,57 @@ jobs:
           DESC="${{ steps.data.outputs.description }}"
           DIFF="${{ steps.diff.outputs.diff_b64 }}"
 
-          CONTENT=$(printf "Titre : %s\nDescription : %s\nDiff Git (base64) :\n%s" "${TITLE}" "${DESC}" "${DIFF}" | jq -Rs .)
+          # Ensure we have valid data to work with
+          if [ -z "$DIFF" ]; then
+            echo "pr_review={\"valid\":false,\"comment\":\"Impossible d'analyser le diff (vide).\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
+          # Create payload with proper JSON escaping
           PAYLOAD=$(jq -n \
-            --arg content "$CONTENT" \
+            --arg model "gpt-4-0125-preview" \
+            --arg system_content "Tu es un assistant chargé de vérifier la qualité d'une Pull Request (PR) sur un projet WordPress. Le diff est encodé en base64. Décode-le avant de l'analyser. Réponds dans le format JSON : {\"valid\": true|false, \"comment\": \"...\", \"suggested_title\": \"...\", \"suggested_description\": \"...\"}" \
+            --arg user_content "Titre : $TITLE\nDescription : $DESC\nDiff Git (base64) :\n$DIFF" \
             '{
-              model: "gpt-4-0125-preview",
+              model: $model,
               messages: [
                 {
                   role: "system",
-                  content: "Tu es un assistant chargé de vérifier la qualité d'une Pull Request (PR) sur un projet WordPress. Le diff est encodé en base64. Décode-le avant de l'analyser."
+                  content: $system_content
                 },
                 {
                   role: "user",
-                  content: $content
+                  content: $user_content
                 }
               ],
               temperature: 0.3
             }')
 
-          RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
+          # Make API call with proper error handling
+          RESPONSE=$(curl -s -w "\n%{http_code}" https://api.openai.com/v1/chat/completions \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          RESPONSE_BODY=$(echo "$RESPONSE" | sed '$ d')
+          
+          if [ "$HTTP_CODE" -ne 200 ]; then
+            echo "pr_review={\"valid\":false,\"comment\":\"Erreur API OpenAI: $HTTP_CODE\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
-          PR_REVIEW=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'\''IA."')
-          echo "pr_review=$PR_REVIEW" >> $GITHUB_OUTPUT
+          # Extract and validate the response
+          PR_REVIEW=$(echo "$RESPONSE_BODY" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'\''IA."')
+          
+          # Ensure the output is valid JSON, or provide a fallback
+          if ! echo "$PR_REVIEW" | jq empty 2>/dev/null; then
+            PR_REVIEW="{\"valid\":false,\"comment\":\"$PR_REVIEW\"}"
+          fi
+          
+          # Escape for GitHub output
+          PR_REVIEW_ESCAPED=$(echo "$PR_REVIEW" | jq -c -R .)
+          echo "pr_review=$PR_REVIEW_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Run code review
         id: code_review
@@ -159,32 +184,57 @@ jobs:
         run: |
           DIFF="${{ steps.diff.outputs.diff_b64 }}"
 
-          CONTENT=$(printf "Diff Git (base64) :\\n%s" "${DIFF}" | jq -Rs .)
+          # Ensure we have valid data to work with
+          if [ -z "$DIFF" ]; then
+            echo "code_review={\"valid\":false,\"formattedComment\":\"Impossible d'analyser le diff (vide).\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
+          # Create payload with proper JSON escaping
           PAYLOAD=$(jq -n \
-            --arg content "$CONTENT" \
+            --arg model "gpt-4-0125-preview" \
+            --arg system_content "Tu es un développeur senior WordPress expert (classique et avec Timber/ACF). Tu vas analyser un diff Git encodé en base64.\n\nDécode le diff avant de l'analyser. Critères : structure WP, nommage, sécurité, ACF, etc. Réponds dans le format : { \"valid\": true|false, \"formattedComment\": \"...\" }" \
+            --arg user_content "Diff Git (base64) :\n$DIFF" \
             '{
-              model: "gpt-4-0125-preview",
+              model: $model,
               messages: [
                 {
                   role: "system",
-                  content: "Tu es un développeur senior WordPress expert (classique et avec Timber/ACF). Tu vas analyser un diff Git encodé en base64.\n\nDécode le diff avant de l’analyser. Critères : structure WP, nommage, sécurité, ACF, etc. Réponds dans le format : { \"valid\": true|false, \"formattedComment\": \"...\" }"
+                  content: $system_content
                 },
                 {
                   role: "user",
-                  content: $content
+                  content: $user_content
                 }
               ],
               temperature: 0.3
             }')
 
-          RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
+          # Make API call with proper error handling
+          RESPONSE=$(curl -s -w "\n%{http_code}" https://api.openai.com/v1/chat/completions \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          RESPONSE_BODY=$(echo "$RESPONSE" | sed '$ d')
+          
+          if [ "$HTTP_CODE" -ne 200 ]; then
+            echo "code_review={\"valid\":false,\"formattedComment\":\"Erreur API OpenAI: $HTTP_CODE\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
-          CODE_REVIEW=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'\''IA."')
-          echo "code_review=$CODE_REVIEW" >> $GITHUB_OUTPUT
+          # Extract and validate the response
+          CODE_REVIEW=$(echo "$RESPONSE_BODY" | jq -r '.choices[0].message.content // "Aucune réponse reçue de l'\''IA."')
+          
+          # Ensure the output is valid JSON, or provide a fallback
+          if ! echo "$CODE_REVIEW" | jq empty 2>/dev/null; then
+            CODE_REVIEW="{\"valid\":false,\"formattedComment\":\"$CODE_REVIEW\"}"
+          fi
+          
+          # Escape for GitHub output
+          CODE_REVIEW_ESCAPED=$(echo "$CODE_REVIEW" | jq -c -R .)
+          echo "code_review=$CODE_REVIEW_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Generate success message
         id: success
@@ -197,32 +247,57 @@ jobs:
           DESC="${{ steps.data.outputs.description }}"
           DIFF="${{ steps.diff.outputs.diff_b64 }}"
 
-          CONTENT=$(printf "Titre : %s\nDescription : %s\nDiff Git (base64) :\n%s" "${TITLE}" "${DESC}" "${DIFF}" | jq -Rs .)
+          # Skip if no diff available
+          if [ -z "$DIFF" ]; then
+            echo "success_msg={\"success_message\":\"Félicitations pour cette PR !\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
+          # Create payload with proper JSON escaping
           PAYLOAD=$(jq -n \
-            --arg content "$CONTENT" \
+            --arg model "gpt-4-0125-preview" \
+            --arg system_content "Tu es un assistant chargé de générer un message de félicitations pour une PR WordPress réussie. Le diff est encodé en base64.\n\nMentionne les types de changements (ACF, template, accessibilité...) et félicite chaleureusement. Format attendu : { \"success_message\": \"...\" }" \
+            --arg user_content "Titre : $TITLE\nDescription : $DESC\nDiff Git (base64) :\n$DIFF" \
             '{
-              model: "gpt-4-0125-preview",
+              model: $model,
               messages: [
                 {
                   role: "system",
-                  content: "Tu es un assistant chargé de générer un message de félicitations pour une PR WordPress réussie. Le diff est encodé en base64.\n\nMentionne les types de changements (ACF, template, accessibilité...) et félicite chaleureusement. Format attendu : { \"success_message\": \"...\" }"
+                  content: $system_content
                 },
                 {
                   role: "user",
-                  content: $content
+                  content: $user_content
                 }
               ],
               temperature: 0.7
             }')
 
-          RESPONSE=$(curl -s https://api.openai.com/v1/chat/completions \
+          # Make API call with proper error handling
+          RESPONSE=$(curl -s -w "\n%{http_code}" https://api.openai.com/v1/chat/completions \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
             -d "$PAYLOAD")
+          
+          HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
+          RESPONSE_BODY=$(echo "$RESPONSE" | sed '$ d')
+          
+          if [ "$HTTP_CODE" -ne 200 ]; then
+            echo "success_msg={\"success_message\":\"Félicitations pour cette PR !\"}" >> $GITHUB_OUTPUT
+            exit 0
+          fi
 
-          SUCCESS_MSG=$(echo "$RESPONSE" | jq -r '.choices[0].message.content // "Félicitations pour cette PR !"')
-          echo "success_msg=$SUCCESS_MSG" >> $GITHUB_OUTPUT
+          # Extract and validate the response
+          SUCCESS_MSG=$(echo "$RESPONSE_BODY" | jq -r '.choices[0].message.content // "Félicitations pour cette PR !"')
+          
+          # Ensure the output is valid JSON, or provide a fallback
+          if ! echo "$SUCCESS_MSG" | jq empty 2>/dev/null; then
+            SUCCESS_MSG="{\"success_message\":\"$SUCCESS_MSG\"}"
+          fi
+          
+          # Escape for GitHub output
+          SUCCESS_MSG_ESCAPED=$(echo "$SUCCESS_MSG" | jq -c -R .)
+          echo "success_msg=$SUCCESS_MSG_ESCAPED" >> $GITHUB_OUTPUT
 
       - name: Post AI Reviews in Slack thread
         run: |
@@ -287,8 +362,6 @@ jobs:
                 \"text\": $ESCAPED_MESSAGE
               }"
           fi
-
-
   notify:
     needs: build
     runs-on: ubuntu-latest
